  so on.
- Bugfix: Issue #112: Fixed Docker detection.
- Bugfix: Issue #110: Docker build command failed, added missing libchardet
  and allow libdvdread4 or *8 to be used, whatever available.
- Bugfix: Fixed crash when video had no audio.
- Bugfix: Issue #112: Fix access problems with frame sets and HLS.
- Enhancement: Issue #67:  Enhance file size prediction,

Important changes in 2.8 (2021-11-29):

* Bugfix: Issue #102: Not all SQL queries where case sensitive, causing cache
  confusion. Several database entries were created, but only one was updated.
  Made all queries case sensitive.
* Bugfix: Issue #91: Fixed HLS problems with cache causing garbled videos and
  hick-ups in audio. Make sure that the cache is clean when transcoding starts.
  There should be no remains left, all segments must be created or recreated
  anyway. Do not append to cache when writing. This caused cache files to
  become larger and larger.
* Enhancement: Issue #103: If requested HLS segment is less than X (adjustable)
  seconds away, discard seek request. Segment would be available very soon
  anyway, and that seek makes a re-transcode necessary. Can be set with
  --min_seek_time_diff. Defaults to 30 seconds.
* Feature: Issue #105: Added Free Lossless Audio Codec (FLAC) support.
  Activate with *--desttype=FLAC*.
* Feature: Issue #101: Sample format for audio files can be selected via
  command line with --audiosamplefmt. Possible values are 0 to use the predefined
  setting, 8, 16, 32, 64 for integer format, F16, F32, F64 for floating point.
  Not all formats are supported by all destination types, selecting an invalid
  format will be reported as error and a list of values printed.
  Defaults to 0 (Use same as source or the predefined format of the destination
  if source format is not possible).
  
Important changes in 2.7 (2021-11-08):

* Bugfix: Issue #92: Fixed crash when hardware decoding failed. The problem