@@ -28,6 +28,7 @@ News
 - **Bugfix:** Fix crash when video has no audio
 - **Bugfix:** [Issue #112](https://github.com/nschlia/ffmpegfs/issues/112): Fix access problems with frame sets and HLS. 
 - **Enhancement:** [Issue #67](https://github.com/nschlia/ffmpegfs/issues/67): Enhance file size prediction,
+- **Bugfix:** Syncronise screen log. Concurrent entries by separate flags created garbled output.
 
 ### Version 2.8 released
 
